src/objects/Territory__c.object
<CustomObject>
    <fields>
        <fullName>RegionID__c</fullName>
        <label>Region ID</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>TerritoryDescription__c</fullName>
        <label>Territory Description</label>
        <type>Text</type>
        <length>50</length>
    </fields>
    <fields>
        <fullName>TerritoryID__c</fullName>
        <label>Territory ID</label>
        <type>Text</type>
        <length>20</length>
    </fields>
    <label>Territory</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>{!label} Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>